# imghcprof

./: Cargo.toml  README.md  flake.nix  package.nix
src/: boilerplate_sdl2.rs  main.rs
