[package]
name = "imghcprof"
version = "1.0.0"
edition = "2021"
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/t4ccer/imghcprof"
authors = ["Tomasz Maciosowski <t4ccer@gmail.com>"]

[dependencies]
imgui = { version = "0.12.0", features = ["docking", "tables-api"] }
imgui-sys = "0.12.0"
imgui-glow-renderer = "0.13.0"
imgui-sdl2-support = "0.13.0"
sdl2 = "0.37.0"
